new swagger and scheduledServicePost
