# src/app/core/services/api/json/swagger.json
@@ -1977,6 +1977,47 @@
         }
       }
     },
+    "/api/ScheduledService/{scheduledServiceId}/GetServicesDuration": {
+      "get": {
+        "tags": ["ScheduledService"],
+        "parameters": [
+          {
+            "name": "scheduledServiceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/ScheduledServiceRequired/CreateScheduledServiceRequired": {
       "post": {
         "tags": ["ScheduledServiceRequired"],
@@ -2363,8 +2404,19 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": []
+          }
+        ]
       },
       "post": {
         "tags": ["Tipos"],
@@ -2407,8 +2459,19 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": []
+          }
+        ]
       }
     },
     "/api/Tipos/{id}": {
@@ -2445,8 +2508,19 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": []
+          }
+        ]
       },
       "put": {
         "tags": ["Tipos"],
@@ -2483,8 +2557,19 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": []
+          }
+        ]
       },
       "delete": {
         "tags": ["Tipos"],
@@ -2502,8 +2587,19 @@
         "responses": {
           "200": {
             "description": "Success"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": []
+          }
+        ]
       }
     },
     "/api/User/Register": {
@@ -2631,6 +2727,10 @@
           "profilePicture": {
             "type": "string",
             "nullable": true
+          },
+          "role": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -2692,6 +2792,10 @@
           "profilePicture": {
             "type": "string",
             "nullable": true
+          },
+          "role": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -2803,6 +2907,10 @@
           "profilePicture": {
             "type": "string",
             "nullable": true
+          },
+          "role": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -2925,6 +3033,10 @@
           "profilePicture": {
             "type": "string",
             "nullable": true
+          },
+          "role": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -3108,6 +3220,18 @@
           "providerServiceId": {
             "type": "integer",
             "format": "int32"
+          },
+          "providerServiceName": {
+            "type": "string",
+            "nullable": true
+          },
+          "providerServiceDuration": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "providerServicePrice": {
+            "type": "number",
+            "format": "float"
           }
         },
         "additionalProperties": false
@@ -3126,20 +3250,24 @@
           "providerServiceId": {
             "type": "integer",
             "format": "int32"
+          },
+          "providerServiceName": {
+            "type": "string",
+            "nullable": true
+          },
+          "providerServiceDuration": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "providerServicePrice": {
+            "type": "number",
+            "format": "float"
           }
         },
         "additionalProperties": false
       },
       "ScheduledService": {
-        "required": [
-          "clientId",
-          "providerId",
-          "providerServiceId",
-          "rating",
-          "registerTime",
-          "scheduledDate",
-          "status"
-        ],
+        "required": ["clientId", "providerId", "registerTime", "scheduledDate"],
         "type": "object",
         "properties": {
           "id": {
@@ -3163,10 +3291,6 @@
             "format": "int32"
           },
           "clientId": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "providerServiceId": {
             "type": "integer",
             "format": "int32"
           },
@@ -3208,9 +3332,12 @@
             "type": "integer",
             "format": "int32"
           },
-          "providerServiceId": {
-            "type": "integer",
-            "format": "int32"
+          "scheduledProviderServices": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ScheduledProviderServiceDto"
+            },
+            "nullable": true
           },
           "status": {
             "type": "integer",
@@ -3298,6 +3425,10 @@
           },
           "nombre": {
             "type": "string"
+          },
+          "logo": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -3310,6 +3441,10 @@
             "format": "int32"
           },
           "nombre": {
+            "type": "string",
+            "nullable": true
+          },
+          "logo": {
             "type": "string",
             "nullable": true
           }
